Changing GUIButton to GUILabel, a more generic implementation. Some specialization will be necessary to produce a button.
Implemented the label rendering ( text rendering )

--- a/SDL2_GUI/SDL2_GUI.vcxproj.filters
+++ b/SDL2_GUI/SDL2_GUI.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="GUIComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GUILabel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUIManager.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SDL2_GUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GUILabel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
