--- a/SDL2_GUI/SDL2_GUI.vcxproj
+++ b/SDL2_GUI/SDL2_GUI.vcxproj
@@ -82,11 +82,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GUILabel.cpp" />
     <ClCompile Include="GUIComponent.cpp" />
     <ClCompile Include="GUIManager.cpp" />
     <ClCompile Include="SDL2_GUI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GUILabel.h" />
     <ClInclude Include="GUIComponent.h" />
     <ClInclude Include="GUIManager.h" />
     <ClInclude Include="SDL2_GUI.h" />
