Implemented a GUIButton class. This class extends GUILabel and change its backgroundColor when clicked and retur the original color when released.
Also modifed the performAction model. Now a Lambda expression may be provided with the component action. This was implemented as a GUIComponent feature.

--- a/SDL2_GUI/SDL2_GUI.vcxproj.filters
+++ b/SDL2_GUI/SDL2_GUI.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="GUILabel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GUIButton.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUIManager.h">
@@ -44,8 +47,15 @@
     <ClInclude Include="GUILabel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GUIButton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GUIComponentState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
 </Project>
