--- a/SDL2_GUI/SDL2_GUI.vcxproj
+++ b/SDL2_GUI/SDL2_GUI.vcxproj
@@ -82,19 +82,23 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GUIButton.cpp" />
     <ClCompile Include="GUILabel.cpp" />
     <ClCompile Include="GUIComponent.cpp" />
     <ClCompile Include="GUIManager.cpp" />
     <ClCompile Include="SDL2_GUI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GUIButton.h" />
     <ClInclude Include="GUILabel.h" />
     <ClInclude Include="GUIComponent.h" />
     <ClInclude Include="GUIManager.h" />
+    <ClInclude Include="GUIComponentState.h" />
     <ClInclude Include="SDL2_GUI.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
