--- a/SDL2_GUI/SDL2_GUI.vcxproj.filters
+++ b/SDL2_GUI/SDL2_GUI.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="GUIButton.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GUIPanel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUIManager.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GUIComponentState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GUIPanel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
