01/06/2017  + Implement the BLEND mode while creating surfaces for text in Labels/Buttons/etc   * implemented blend mode for text and background color in all components based in Label   * Implemented blend for background image for all GUIComponents ( add a new function void setBackgroundImage(SDL_Texture* backgroundImage, Uint8 alpha); )
 + Implement TextField component ( to enable input text )
  * Implemented a GUITextField component. It is able to receive simple text input, render backgroud images/borders/backgroud color.
  * It implements 2 states (GUIComponentState::base and GUIComponentState::editing) -> Each state has its own graphic configuration (diferente colors, bgImages, borders)
  * It have a seccond action triggered when return is pressed ( GUITextField::returnPressedAction)
  * New event handling implemented in GUIManager in order to deal with text editing features. At this moment only one component must edit text each time (there is need for more than one?)

  + Improved functionalities in GUIButton
  * Now GUIButton have the option to render background images (one for each state).

  + Modified some function calls to make it more reusable in GUIComponent, GUILabel

--- a/SDL2_GUI/SDL2_GUI.vcxproj
+++ b/SDL2_GUI/SDL2_GUI.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="GUIComponent.cpp" />
     <ClCompile Include="GUIManager.cpp" />
     <ClCompile Include="GUIPanel.cpp" />
+    <ClCompile Include="GUITextField.cpp" />
     <ClCompile Include="SDL2_GUI.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -96,6 +97,7 @@
     <ClInclude Include="GUIManager.h" />
     <ClInclude Include="GUIComponentState.h" />
     <ClInclude Include="GUIPanel.h" />
+    <ClInclude Include="GUITextField.h" />
     <ClInclude Include="SDL2_GUI.h" />
   </ItemGroup>
   <ItemGroup>
