--- a/SDL2_GUI/SDL2_GUI.vcxproj.filters
+++ b/SDL2_GUI/SDL2_GUI.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="GUIPanel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GUITextField.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUIManager.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GUIPanel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GUITextField.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
