+ Implement scrollbars   - Implemented a simple and fuction version of scrollbars.    * It has the option to set alignment (VERTICAL/HORIZONTAL)    * It check the boundaries about min and max values    * Its possible to add 2 callback functions to be notified when an increment or decrement occurs

--- a/SDL2_GUI/SDL2_GUI.vcxproj.filters
+++ b/SDL2_GUI/SDL2_GUI.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="GUITextField.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GUIScrollbar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUIManager.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GUITextField.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GUIScrollbar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
