--- a/SDL2_GUI/SDL2_GUI.vcxproj
+++ b/SDL2_GUI/SDL2_GUI.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="GUIComponent.cpp" />
     <ClCompile Include="GUIManager.cpp" />
     <ClCompile Include="GUIPanel.cpp" />
+    <ClCompile Include="GUIScrollbar.cpp" />
     <ClCompile Include="GUITextField.cpp" />
     <ClCompile Include="SDL2_GUI.cpp" />
   </ItemGroup>
@@ -97,6 +98,7 @@
     <ClInclude Include="GUIManager.h" />
     <ClInclude Include="GUIComponentState.h" />
     <ClInclude Include="GUIPanel.h" />
+    <ClInclude Include="GUIScrollbar.h" />
     <ClInclude Include="GUITextField.h" />
     <ClInclude Include="SDL2_GUI.h" />
   </ItemGroup>
