05/06/2017  - Implement TextArea component ( to show long texts ) -   * Implemented a first version of a textarea based on GUIPanel. This component support long text rendering with automatic line break, it has a padding attributes and show an text "(...)" when text overflows its defined height.
 - Improvements: Added a attribute to show/hide components. If the component is set to hide it will no longer   receive click events events or be draw.

--- a/SDL2_GUI/SDL2_GUI.vcxproj.filters
+++ b/SDL2_GUI/SDL2_GUI.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="GUISpinner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GUITextArea.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUIManager.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GUISpinner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GUITextArea.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
