--- a/SDL2_GUI/SDL2_GUI.vcxproj
+++ b/SDL2_GUI/SDL2_GUI.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="GUIPanel.cpp" />
     <ClCompile Include="GUIScrollbar.cpp" />
     <ClCompile Include="GUISpinner.cpp" />
+    <ClCompile Include="GUITextArea.cpp" />
     <ClCompile Include="GUITextField.cpp" />
     <ClCompile Include="SDL2_GUI.cpp" />
   </ItemGroup>
@@ -101,6 +102,7 @@
     <ClInclude Include="GUIPanel.h" />
     <ClInclude Include="GUIScrollbar.h" />
     <ClInclude Include="GUISpinner.h" />
+    <ClInclude Include="GUITextArea.h" />
     <ClInclude Include="GUITextField.h" />
     <ClInclude Include="SDL2_GUI.h" />
   </ItemGroup>
