05/06/2017  - Implement TextArea component ( to show long texts ) -   * Implemented a first version of a textarea based on GUIPanel. This component support   long text rendering with automatic line break, it has a padding attributes and show an    text "(...)" when text overflows its defined height.
 - Improvements:
  * Added a attribute to show/hide components. If the component is set to hide it will
    no longer receive click events events or be draw.
  * Added a feature to render textFields as a password fields. Now if the function
  textfield->setIsPassword(bool) receive TRUE as parameter the text will be rendered
  as a '*' characters.

--- a/SDL2_GUI/SDL2_GUI.vcxproj
+++ b/SDL2_GUI/SDL2_GUI.vcxproj
@@ -14,10 +14,11 @@
     <ProjectGuid>{FD0B735C-E081-4F0B-8300-98DF7136F1DD}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>SDL2_GUI</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -91,7 +92,6 @@
     <ClCompile Include="GUISpinner.cpp" />
     <ClCompile Include="GUITextArea.cpp" />
     <ClCompile Include="GUITextField.cpp" />
-    <ClCompile Include="SDL2_GUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUIButton.h" />
@@ -104,7 +104,6 @@
     <ClInclude Include="GUISpinner.h" />
     <ClInclude Include="GUITextArea.h" />
     <ClInclude Include="GUITextField.h" />
-    <ClInclude Include="SDL2_GUI.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
