--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@ x64/
 build/
 [Bb]in/
 [Oo]bj/
+[Ll]ib/
+
+#CMAKE Temp Files
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
@@ -155,3 +162,4 @@ $RECYCLE.BIN/
 # Mac desktop service store files
 .DS_Store
 /SDL2_GUI.VC.VC.opendb
+.vscode/settings.json
